--- a/index.html
+++ b/index.html
@@ -3,5 +3,14 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+
+<iframe 
+  src="https://rag-ade.onrender.com" 
+  width="100%" 
+  height="800px" 
+  style="border: none;">
+</iframe>
+
 </body>
 </html>
+
