--- a/index.html
+++ b/index.html
@@ -86,19 +86,105 @@
       text-shadow: 0 0 4px #39ff14;
     }
 
-    iframe {
+    /* Arcade Window Style */
+    .arcade-window {
+      background: #101618;
+      border: 4px solid #39ff14;
+      border-radius: 18px 18px 24px 24px/16px 16px 28px 28px;
+      box-shadow:
+        0 0 12px #39ff1470, /* neon outer */
+        0 6px 36px #000a inset, /* frame depth */
+        0 0 1px #fff7;
+      margin-top: 2.2rem;
+      margin-bottom: 2rem;
+      position: relative;
+      overflow: hidden;
+      padding-top: 44px; /* for console-bar */
+      /* CRT scanlines effect: */
+      background-image:
+        repeating-linear-gradient(
+          to bottom,
+          rgba(255,255,255,0.04) 0px, 
+          rgba(255,255,255,0.04) 2px,
+          transparent 2px, 
+          transparent 8px
+        );
+    }
+
+    /* Arcade top console bar */
+    .arcade-console-bar {
+      position: absolute;
+      top: 0; left: 0; right: 0;
+      height: 44px;
+      background: linear-gradient(90deg, #191919 60%, #303030 100%);
+      border-bottom: 2px solid #00ffae77;
+      display: flex;
+      align-items: center;
+      padding: 0 16px;
+      z-index: 10;
+    }
+    .arcade-led {
+      width: 14px; height: 14px;
+      border-radius: 50%;
+      margin-right: 10px;
+      background: radial-gradient(ellipse at 50% 40%, #39ff14 80%, #005304 100%);
+      box-shadow: 0 0 10px #39ff14aa, 0 0 3px #fff inset;
+      animation: led-blink 1.5s infinite;
+    }
+    .arcade-led.off {
+      background: #222;
+      box-shadow: 0 0 2px #fff4 inset;
+      animation: none;
+    }
+    .arcade-console-bar span {
+      font-size: 1rem;
+      font-weight: bold;
+      color: #39ff14;
+      letter-spacing: 2px;
+      margin-right: 24px;
+      text-shadow: 0 0 2px #fff, 0 0 6px #39ff14bb;
+      opacity: 0.86;
+    }
+    .arcade-console-bar .right-bar {
+      margin-left: auto;
+      display: flex;
+      align-items: center;
+      color: #fff;
+      font-size: 0.95rem;
+      opacity: 0.80;
+      letter-spacing: 1px;
+    }
+    @keyframes led-blink {
+      0% {filter: brightness(1);}
+      80% {filter: brightness(1);}
+      90% {filter: brightness(0.5);}
+      100% {filter: brightness(1);}
+    }
+
+    .arcade-screen {
+      margin: 0;
       width: 100%;
-      height: 800px;
-      border: 2px solid #39ff14;
-      background: #000;
-      box-shadow: 0 0 24px #39ff1411, 0 0 10px #39ff1466 inset;
-      margin-top: 1rem;
-      border-radius: 8px;
+      height: 750px;
+      border: 0;
+      border-radius: 2px 2px 18px 18px/4px 4px 16px 16px;
+      background: #020;
+      background: repeating-linear-gradient(
+        to bottom,
+        rgba(0,0,0,0.07) 0 2px,
+        transparent 2px 12px
+      );
+      box-shadow:
+        0 0 30px #39ff1433 inset,
+        0 0 50px #fff1 inset;
+      filter: saturate(0.85) contrast(1.15) brightness(1.1);
+      position: relative;
+      z-index: 1;
+      display: block;
     }
 
     @media (max-width: 768px) {
       section { padding: 1rem; }
-      iframe { height: 500px; }
+      .arcade-screen { height: 400px; }
     }
   </style>
 </head>
@@ -117,11 +203,20 @@
     <h2>RAG Demo Console</h2>
     <p>
       💫 <b>Mission:</b> Try out my <b>Retrieval-Augmented Generation</b> AI!<br>
-      It's live on Render.<br>
-      <br>
+      It's live on Render.<br><br>
       <span style="letter-spacing:2px; color:#39ff14;">INSERT COIN TO START</span>
     </p>
-    <iframe src="https://rag-ade.onrender.com"></iframe>
+
+    <div class="arcade-window">
+      <div class="arcade-console-bar">
+        <div class="arcade-led"></div>
+        <span>POWER</span>
+        <div class="arcade-led off"></div>
+        <span>COIN</span>
+        <div class="right-bar">PLAYER 1</div>
+      </div>
+      <iframe class="arcade-screen" src="https://rag-ade.onrender.com"></iframe>
+    </div>
   </section>
 
 </body>
