--- a/index.html
+++ b/index.html
@@ -49,9 +49,17 @@
       text-shadow: 0 0 7px #fff8, 0 0 2px #ffff0440;
     }
 
+    .content {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 0 2%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
     h1 {
       color: #ffff04;
-      text-align: center;
+      text-align: left;
       font-size: 1.4rem;
       letter-spacing: 2px;
       margin-bottom: 0.8em;
@@ -59,24 +67,24 @@
       text-shadow: 0 0 6px #ffff048a;
     }
     .intro {
-      text-align: center;
-      max-width: 650px;
-      margin: 0 auto 2.1em auto;
+      text-align: left;
       color: #fff;
       font-size: 1.14rem;
+      max-width: 600px;
+      margin-bottom: 2.1em;
       opacity: 0.92;
     }
 
     .iframe-holder {
-      width: 94%;
+      width: 100%;
       max-width: 850px;
-      margin: 1.8em auto 0 auto;
       border-radius: 14px;
       overflow: hidden;
       box-shadow: 0 0 26px #ffff0430, 0 0 2px #ffff04c0;
       border: 2.5px solid #ffff04;
       background: #0a0a0a;
       transition: box-shadow 0.35s;
+      margin-bottom: 48px;
     }
     .iframe-holder:hover {
       box-shadow: 0 0 36px #ffff04ad, 0 0 12px #fff2;
@@ -93,6 +101,7 @@
       .adi-table .left, .adi-table .right { font-size: 1.2rem;}
       .iframe-holder { width: 99%; border-radius: 8px;}
       iframe { height: 350px; }
+      .content { padding: 0 1%; }
     }
   </style>
 </head>
@@ -112,15 +121,16 @@
     </table>
   </div>
 
-  <h1>AI search engine for ADE 2024 (RAG)</h1>
-  <div class="intro">
+  <div class="content">
+    <h1>AI search engine for ADE 2024 (RAG)</h1>
+    <div class="intro">
       Welcome to Amsterdam Dance Intelligence!<br>
       This AI-powered search engine is designed for the Amsterdam Dance Event 2024.<br>
       Enter your query below and discover the most relevant, up-to-date information drawn from official ADE sources using Retrieval-Augmented Generation (RAG).
-  </div>
-
-  <div class="iframe-holder">
-    <iframe src="https://rag-ade.onrender.com"></iframe>
+    </div>
+    <div class="iframe-holder">
+      <iframe src="https://rag-ade.onrender.com"></iframe>
+    </div>
   </div>
 
 </body>
