--- a/index.html
+++ b/index.html
@@ -106,9 +106,22 @@
         <span style="color:#ffe600;">I</span><span class="rest">ntelligence</span>
       </div>
       <div class="intro-text">
-        Welcome to Amsterdam Dance Intelligence!<br>
-        This AI-powered search engine is designed for the Amsterdam Dance Event 2024.
-        Enter your query on the right to discover the most relevant, up-to-date information using Retrieval-Augmented Generation (RAG).
+        This is a search engine which uses AI to find events for the Amsterdam Dance Event (ADE) in 2024.<br><br>
+
+  <b>What it can do:</b>
+  <ul style="margin-top: 0.4em;">
+    <li>Find events by artist name, genre, date, label, price or venue</li>
+    <li>Find events with music <i>similar</i> to a specific DJ.</li>
+    <li>Search for vibe (e.g. something melanchonic)</li>
+    <li>Search for random activities (e.g. painting, running)</li>
+  </ul>
+
+  <b>What it can't do (yet):</b>
+  <ul style="margin-top: 0.4em;">
+    <li>Set up a schedule for ADE</li>
+    <li>Handle requests which are not search related</li>
+    <li>Complex queries</li>
+  </ul>
       </div>
     </div>
     <div class="right-panel">
